<resources>
    <string name="app_name">MiAgenda</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="login_usuario">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="iniciar_sesion_btn">Iniciar sesión</string>
    <string name="iniciar_sesion_google_btn">Iniciar con Google</string>
    <string name="crear_cuenta_btn">Crear Cuenta</string>
    <string name="datos_login_no_validos">Por favor ingrese correo y contraseña</string>
    <string name="nuevo_paciente_name">Nuevo paciente</string>
    <string name="cerrar_sesion_option_item">Cerrar sesión</string>
    <string name="fecha_nacimiento_calendario">Fecha de nacimiento</string>
    <string name="tomar_foto_btn">Tomar foto</string>
    <string name="registrar_paciente_btn">Registrar</string>
    <string name="nombre_paciente">Nombre</string>
    <string name="apellido_paciente">Apellido</string>
    <string name="telefono_paciente">Teléfono</string>
    <string name="provincia_paciente">Provincia</string>
    <string name="ciudad_paciente">Ciudad</string>
    <string name="calle_paciente">Calle</string>
    <string name="numero_direccion_paciente">Numero</string>
    <string name="obra_social_paciente">Obra social</string>
    <string name="campo_vacio_error">Este campo no puede estar vacío</string>
    <string name="dni_paciente">DNI</string>
    <string name="dni_paciente_lbl">DNI:</string>
    <string name="domicilio_paciente_lbl">Domicilio:</string>
    <string name="obra_social_paciente_lbl">Obra social:</string>
    <string name="edad_paciente_lbl">Edad:</string>
    <string name="ver_historia_btn">Ver historia clínica</string>
    <string name="telefono_paciente_lbl">Teléfono:</string>
    <string name="ubicacion_no_encontrada">Ubicación paciente no encontrada. \n %1$s</string>
    <string name="peticion_permiso_localizacion">Para tener una mejor experiencia, debes permitir que la aplicación use tu localización.</string>
    <string name="ok_option">OK</string>
    <string name="mapa_mas_info">Para mas info, toca en la ubicación.</string>
    <string name="historia_clinica_toolbar">Historia Clínica</string>
    <string name="paciente_lbl">Paciente</string>
    <string name="generar_pdf_btn">Generar PDF</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_mi_agenda">Mi Agenda</string>
    <string name="menu_mis_pacientes">Mis Pacientes</string>
    <string name="fecha_hoy_default">Martes 19 de Noviembre de 2019</string>
    <string name="hora_turno_default">14:00 hs</string>
    <string name="turno_disponible">Turno disponible</string>
    <string name="reservar_turno">Reservar</string>
    <string name="turno_ocupado">Turno Ocupado</string>
    <string name="modificar_turno">Modificar</string>
    <string name="quitar_turno">Quitar</string>
    <string name="paciente_default">Tobias Villa</string>
    <string name="titulo_nuevo_turno">Nuevo Turno</string>
    <string name="titulo_ver_turno">Ver Turno</string>
    <string name="cambiar_paciente">Cambiar Paciente</string>
    <string name="ver_paciente">Ver Paciente</string>
    <string name="descripcion_lbl">Descripción</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_creacion_cuenta">Se produjo un error al crear la cuenta</string>
    <string name="exito_creacion_cuenta">Se creó la cuenta correctamente</string>
    <string name="error_clave_6_caracteres">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_inicio_sesion">Se produjo un error al iniciar sesión</string>
    <string name="exito_inicio_sesion">Se inició sesión correctamente</string>
    <string name="error_inicio_sesion_google">No se pudo iniciar sesión con Google</string>
    <string name="usuario_default">Usuario</string>
    <string name="exito_inicio_sesion_google">Se inició sesión con Google</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="directorio_destino_pdf">/HistoriasClinicasPDF/</string>
    <string name="error_guardar_pdf">Error al guardar historia clínica.</string>
    <string name="exito_guardar_pdf">Éxito al guardar historia clínica.</string>
    <string name="crear_pdf_progress_dialog">Guardando historia clínica</string>
    <string name="ver_pdf_btn">Ver PDF</string>
    <string name="archivo_inexistente_snackbar">No existe el archivo.</string>
    <string name="instalar_aplicacion_pdf">Instalar una aplicación para visualizar PDF.</string>
    <string name="direccion">Dirección</string>
    <string name="departamento_direccion_paciente">Departamento</string>
    <string name="pais_paciente">País</string>
    <string name="pais_default">Argentina</string>
    <string name="fecha_ver_turno">SELECCIONE UNA FECHA PARA VER LOS TURNOS</string>
    <string name="seleccionar_paciente">Seleccionar paciente</string>
    <string name="listo_option">LISTO</string>
    <string name="titulo_dialogo_quitar_turno">Quitar turno</string>
    <string name="msg_dialogo_quitar_turno">¿Seguro deseas quitar el turno?</string>
    <string name="nombre_ver_paciente">Nombre:</string>
    <string name="toque_para_reservar_lbl">Toque para reservar turno</string>
    <string name="ver_pdf_snackbar">VER</string>
    <string name="datos_paciente_no_validos">Por favor ingrese datos válidos.</string>
    <string name="por_favor_espere">Por favor espere</string>
    <string name="guardando_paciente">Guardando paciente.</string>
    <string name="llamar_btn">Llamar</string>
    <string name="llamada_item_option">Llamada</string>
    <string name="editar_paciente">Editar paciente</string>
    <string name="guardar">GUARDAR</string>
    <string name="buscando_paciente">Buscando paciente</string>
    <string name="search_item_option">Buscar</string>
    <string name="buscar_option">Buscar</string>
    <string name="busqueda_hint">Búsqueda</string>
    <string name="seleccionar_tipo_busqueda_lbl">Buscar por:</string>
    <string name="channel_name">Notificación diaria</string>
    <string name="channel_description">Canal creado para las notificación diaria</string>
    <string name="notificacion_diaria_text">Toca para ver tus turnos de hoy.</string>
    <string name="notificacion_diaria_title">¡Buen día!</string>

    <string-array name="buscar_array">
        <item>Apellido</item>
        <item>Nombre</item>
        <item>DNI</item>
    </string-array>

    <string name="seleccione_paciente">Seleccione un paciente</string>
    <string name="elimino_turno">Se eliminó el turno</string>
    <string name="error_eliminar_turno">Se produjo un error al eliminar el turno</string>
    <string name="aviso_sin_paciente">Se canceló la creación del turno</string>
    <string name="seleccionando_paciente">Seleccionando paciente para turno</string>
    <string name="x">X</string>
    <string name="fecha_turno_dialog">Fecha: %1$d/%2$d/%3$d - %4$d:%5$s hs.</string>
    <string name="fecha_miagenda">%1$d de %2$s de %3$d</string>
    <string name="hora_turno_miagenda">%1$d:%2$s hs.</string>
    <string name="fecha_nacimiento">%1$d/%2$d/%3$d</string>
    <string name="editar_item_option">Editar</string>
</resources>
