<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".interfaces.LoginActivity">


    <TextView
        android:id="@+id/inicio_sesion_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50sp"
        android:paddingBottom="20sp"
        android:text="@string/inicio_sesion"
        android:textAlignment="center"
        android:textColor="@color/colorTextPrimary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/iniciar_sesion_google_btn"
        app:layout_constraintStart_toStartOf="@+id/iniciar_sesion_google_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_usuario_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/login_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inicio_sesion_lbl">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_usuario_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/login_password"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_usuario_layout"
        app:endIconMode="password_toggle"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/iniciar_sesion_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="10dp"
        android:insetRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/iniciar_sesion_btn"
        android:textColor="@color/colorTextPrimary"
        app:cornerRadius="@dimen/login_buttons_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/iniciar_sesion_google_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="10dp"
        android:insetRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/iniciar_sesion_google_btn"
        android:textColor="@color/colorTextPrimary"
        app:cornerRadius="@dimen/login_buttons_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion_btn" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/crear_cuenta_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:insetLeft="10dp"
        android:insetRight="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/crear_cuenta_btn"
        android:textColor="@color/colorTextPrimary"
        app:cornerRadius="@dimen/login_buttons_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion_google_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>