<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ver_paciente_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".interfaces.VerPacienteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ver_paciente_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/ver_paciente_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scroll_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dni_paciente_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="5sp"
                android:text="@string/dni_paciente_lbl"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/edad_paciente_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="5sp"
                android:text="@string/edad_paciente_lbl"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/obra_social_paciente_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="5sp"
                android:text="@string/obra_social_paciente_lbl"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/telefono_paciente_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="5sp"
                android:text="@string/telefono_paciente_lbl"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/domicilio_paciente_lbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginTop="12sp"
                android:layout_marginEnd="5sp"
                android:text="@string/domicilio_paciente_lbl"
                android:textColor="@color/colorTextPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ver_paciente_botones_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/ver_historia_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginEnd="35sp"
                    android:layout_weight="1"
                    android:paddingTop="15sp"
                    android:paddingBottom="15sp"
                    android:text="@string/ver_historia_btn"
                    android:textColor="@color/colorTextPrimary"
                    app:cornerRadius="@dimen/login_buttons_radius" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>