<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nuevo_paciente_linear_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".interfaces.NuevoPacienteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/nuevo_paciente_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:title="@string/nuevo_paciente_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/nuevo_paciente_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/nuevo_paciente_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombre_paciente_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/nombre_paciente"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre_paciente_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="15"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apellido_paciente_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/apellido_paciente"
                app:counterMaxLength="15"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/apellido_paciente_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"
                    android:maxLength="15"
                    android:maxLines="1"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fecha_nacimiento_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/fecha_nacimiento_calendario"
                app:helperTextEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fecha_nacimiento_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date|textCapWords"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dni_paciente_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/dni_paciente"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dni_paciente_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:importantForAutofill="no"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefono_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/telefono_paciente"
                app:counterMaxLength="15"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/telefono_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:importantForAutofill="no"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/obra_social_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/obra_social_paciente"
                app:counterMaxLength="30"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/obra_social_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pais_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/pais_paciente"
                app:counterMaxLength="30"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pais_edit"
                    android:text="@string/pais_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress|textCapWords"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/provincia_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/provincia_paciente"
                app:counterMaxLength="30"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/provincia_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress|textCapWords"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ciudad_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/ciudad_paciente"
                app:counterMaxLength="30"
                app:counterEnabled="true"
                app:helperTextEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ciudad_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress|textCapWords"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:importantForAutofill="no"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/calle_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/calle_paciente"
                app:counterMaxLength="30"
                app:counterEnabled="true"
                app:helperTextEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calle_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress|textCapWords"
                    android:maxLines="1"
                    android:maxLength="30"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numero_direccion_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/numero_direccion_paciente"
                app:counterMaxLength="10"
                app:counterEnabled="true"
                app:helperTextEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numero_direccion_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/departamento_direccion_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/departamento_direccion_paciente"
                app:counterMaxLength="10"
                app:counterEnabled="true"
                app:helperTextEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/departamento_direccion_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:importantForAutofill="no"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/image_view_paciente_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/eliminar_foto_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="false"
                    android:layout_centerVertical="true"
                    android:textAlignment="viewStart"
                    app:icon="@drawable/ic_cancel" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/foto_paciente_image_view"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerVertical="false"
                    android:layout_marginEnd="-1dp"
                    android:layout_toStartOf="@+id/eliminar_foto_btn"
                    android:elevation="5dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/nuevo_paciente_botones_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tomar_foto_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/tomar_foto_btn"
                    android:textColor="@color/colorTextSecondary"
                    app:cornerRadius="@dimen/buttons_radius" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registrar_paciente_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:elegantTextHeight="false"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/registrar_paciente_btn"
                    android:textColor="@color/colorTextSecondary"
                    app:cornerRadius="@dimen/buttons_radius" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>